# SCEA-ETP-DEETC-Toronto

./: README.md
SCEA - Code/ETTP-Benchmarks/DEETC-2009-2010/: Relacoes UC 0910i - 80 exams.xls  Relacoes UC 0910i.xls  Relacoes UC 0910i_2epoca.xls  Relacoes UC 0910i_2epoca_80exams.ods  Relacoes UC 0910i_2epoca_conflict_matrix_complete.ods  deetc0910-LEETC-ManualSol.csv  deetc0910-LEETC-ManualSol.ods  deetc0910-LEIC-ManualSol.csv  deetc0910-LEIC-ManualSol.ods  deetc0910-LERCM-ManualSol.csv  deetc0910-LERCM-ManualSol.ods  deetc0910-MEET-ManualSol.csv  deetc0910-MEET-ManualSol.ods  deetc0910-MEIC-ManualSol.csv  deetc0910-MEIC-ManualSol.ods  deetc0910-ManualSol.xls  deetc0910.crs~  deetc0910_1stEpoch.cm  deetc0910_1stEpoch.crs  deetc0910_1stEpoch.names  deetc0910_2ndEpoch.cm
SCEA - Code/ETTP-Benchmarks/DEETC-2009-2010/secondEpochSolutions/: LEETC.csv  LEETC_numPeriods_12_cost_550.csv  LEIC.csv  LEIC_numPeriods_12_cost_418.csv  LERCM.csv  LERCM_numPeriods_12_cost_195.csv  MEET.csv  MEET_numPeriods_12_cost_124.csv  MEIC.csv  MEIC_numPeriods_12_cost_66.csv
SCEA - Code/ETTP-Benchmarks/ExamEvaluate/: ExamEvaluate.cpp  Timetabling.cpp
SCEA - Code/ETTP-Benchmarks/ExamEvaluate/Toronto/: car-f-92.sol  car-f-92.sol~  ear-f-83.stu  hec-s-92.sol  hec-s-92.sol~  hec-s-92.stu  lse-f-91.crs  lse-f-91.stu  pur-s-93.crs  pur-s-93.sol  pur-s-93.sol~  pur-s-93.stu  readme.txt  sta-f-83.sol  sta-f-83.sol~  uta-s-92.sol  uta-s-92.stu  yor-f-83.sol  yor-f-83.sol.old  yor-f-83.sol~
SCEA - Code/ETTP-Benchmarks/ITC2007/: exam_comp_set10.exam  exam_comp_set11.exam  exam_comp_set12.exam  exam_comp_set9.exam
SCEA - Code/ETTP-Benchmarks/Toronto Testprob/: Toronto.7z
SCEA - Code/ETTP-Benchmarks/Toronto Testprob/Toronto/: car-f-92.cm  car-s-91.cm  ear-f-83.cm  hec-s-92.cm  kfu-s-93.cm  lse-f-91.cm  rye-s-93.cm  rye-s-93.crs  rye-s-93.stu  sta-f-83.cm  sta-f-83.stu  uta-s-92.cm  ute-s-92.crs  ute-s-92.stu  yor-f-83.cm
SCEA - Code/so/: CMakeLists.txt  cmd_line.txt
SCEA - Code/so/exes/: TestSO.cpp
SCEA - Code/so/lib/: CMakeLists.txt  CSVParser.h  Constraint.hpp  ConstraintValidator.hpp  Crossover.cpp  Crossover.h  DEETCTestSet.cpp  DEETCTestSet.h  Data.h  DateTime.cpp  DateTime.h  ETTPInit.h  GraphColouringHeuristics.cpp  GraphColouringHeuristics.h  GraphColouringHeuristics_ITC2007_CHANGED_9_FEB_2015.h  ITC2007Constraints.hpp  ITC2007Period.h  ITC2007SolutionInitialiser.h  ITC2007TestSet.cpp  ITC2007TestSet.h  MainApp.cpp  Matrix.cpp  Matrix.h  Mutation.cpp  Mutation.h  Period.h  ProximityCostEval.h  Room.h  TestSet.h  TestSetDescription.h  TimetableProblemData.hpp  TorontoTestSet.cpp  TorontoTestSet.h  eoCellularEA.h  eoCellularEAMatrix.h  eoCellularEARing.h  eoETTPEval.h  eoETTPNumberClashesEval.h  eoEvolutionOperator.h  eoGenerationContinue.h  (+3 more)
SCEA - Code/so/lib/base/: CMakeLists.txt  Common.h
SCEA - Code/so/lib/base/algorithms/: moGDA.h  moGDAexplorer.h  moSA.h  moSAexplorer.h  moSimpleCoolingSchedule.h  moTA.h  moTAexplorer.h
SCEA - Code/so/lib/base/algorithms/statistics/: moTAWithStatistics.h  moTAexplorerWithStatistics.h
SCEA - Code/so/lib/base/chromosome/: Chromosome.cpp  Chromosome.h  ChromosomeCapacitated.cpp  ChromosomeCapacitated.hpp  ExtendedChromosome.cpp  ExtendedChromosome.h  eoChromosome.cpp  eoChromosome.h  eoChromosomeCapacitated.cpp  eoChromosomeCapacitated.hpp  eoExtendedChromosome.cpp  eoExtendedChromosome.h
SCEA - Code/so/lib/base/chromosome/original/: Chromosome.cpp  Chromosome.h
SCEA - Code/so/lib/base/kempeChain/: ETTPKempeChain.h  ETTPKempeChainHeuristic.h  ETTPKempeChainHeuristicTwoEpoch.h
SCEA - Code/so/lib/base/kempeChain/statistics/: ETTPKempeChainHeuristicWithStatistics.h
SCEA - Code/so/lib/base/neighbourhood/: ETTPneighbor.h  ETTPneighborEval.h  ETTPneighborhood.h
SCEA - Code/so/lib/base/neighbourhood/original code/: ETTPneighbor.h  ETTPneighborEval.h  ETTPneighborhood.h
SCEA - Code/so/lib/base/statistics/: ExamMoveStatistics.cpp  ExamMoveStatistics.h
SCEA - Code/so/lib/deetc/: MainApp2EpochDEETC.cpp
SCEA - Code/so/lib/toronto/: MainAppTorontoDatasets.cpp
SCEA - Code/so/lib/utils/: Utils.cpp
(+11 files in other folders)
